--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -6,6 +6,7 @@
     max-width: 1400px;
     min-height: 100vh;
     background-color: #F8F8F8;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
 .content {
