--- a/src/App/Sidebar/Sidebar.module.css
+++ b/src/App/Sidebar/Sidebar.module.css
@@ -3,9 +3,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 16px;
+    padding: 8px 24px;
+    background-color: white;
+    box-shadow: 4px 2px 4px 0 rgba(0,0,0,.2);
+    border-radius: 2px;
+    border: 1px solid #F8F8F8;
 }
 
 .hero {
-    height: 250px;
-    width: 250px;
+    height: 150px;
+    width: 150px;
+}
+
+.subtitle {
+    width: 80%;
+    font-size: 14px;
+    color: lightgray;
 }
